# data_for_finetuning_gpt2

./: README.md
parse_history_xml/: Cargo.toml
parse_history_xml/src/: main.rs  mapping.rs
